# codex-lb

./: .all-contributorsrc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.distroless  README.md  docker-compose.prod.yml  docker-compose.vps.yml  pyproject.toml  renovate.json  test_limit_fix.py
.agents/: settings.local.json
.agents/conventions/: git-workflow.md
.github/: release-please-config.json
.github/workflows/: branch-docker-image.yml  branch-image.yml  ci.yml  release.yml  stale.yml  windows-startup.yml
app/: __init__.py  cli.py  dependencies.py  main.py
app/core/: bootstrap.py  draining.py  request_locality.py  runtime_logging.py  shutdown.py  startup.py
app/db/: migrate.py  models.py  session.py  sqlite_pg_cutover.py
frontend/: package.json
frontend/screenshots/: fixtures.ts
frontend/src/: App.tsx
scripts/: docker-entrypoint.sh  helm-kind-smoke.sh  openai_compat_live_check.py  verify_rollout_safe_bridge.py
tests/: conftest.py
tests/e2e/: conftest.py  test_api_key_lifecycle.py  test_auth_flow.py  test_health_flow.py  test_proxy_flow.py
tests/integration/: test_accounts_api_extended.py  test_api_keys_api.py  test_api_keys_trends_api.py  test_auth_middleware.py  test_cache_locality_fix.py  test_codex_usage_api.py  test_dashboard_bootstrap.py  test_dashboard_overview.py  test_dashboard_password_auth.py  test_health_probes.py  test_http_responses_bridge.py  test_load_balancer_integration.py  test_migrations.py  test_multi_instance_bridge.py  test_multi_replica.py  test_openai_compat_features.py  test_proxy_api_extended.py  test_proxy_chat_completions.py  test_proxy_compact.py  test_proxy_responses.py  test_proxy_sticky_sessions.py  test_proxy_transcriptions.py  test_proxy_transient_retry.py  test_proxy_websocket_responses.py  test_request_logs_filters.py  test_request_logs_list_count.py  test_settings_api.py  test_sqlite_pg_cutover.py  test_sticky_sessions_api.py  test_usage_summary.py  test_v1_models.py  test_v1_usage.py  test_viewer_portal_api.py
tests/load/: README.md  baseline.js  soak.js  spike.js  stress.js
tests/unit/: test_api_keys_service.py  test_audit_trail.py  test_auth_manager.py  test_auth_refresh.py  test_backpressure.py  test_bootstrap.py  test_bridge_context_blowup.py  test_bulkhead.py  test_chat_response_mapping.py  test_circuit_breaker.py  test_dashboard_auth_api.py  test_dashboard_trends.py  test_db_migrate.py  test_db_rate_limiter.py  test_db_session.py  test_durable_bridge_sessions.py  test_failover_foundation.py  test_firewall_service.py  test_graceful_degradation.py  (+51 more)
(+536 files in other folders)
